--- a/deso48.tex
+++ b/deso48.tex
@@ -9,128 +9,128 @@ I. Phần trắc nghiệm khách quan:
 		\item $\frac{9}{4} ;-\frac{1}{4}$
 		\item $-\frac{9}{4} ; \frac{1}{4}$
 	\end{enumerate}
-	\loigiai{} 
+	\loigiai{A} 
 \end{bt}
 
 \begin{bt}
 	Cho góc $x \mathrm{Oy}=50^{\circ}$, điểm $\mathrm{A}$ nằm trên $\mathrm{Oy}$. Qua $\mathrm{A}$ vẽ tia $\mathrm{Am}$. Để Am song song với Ox thì số đo của góc $\mathrm{OAm}$ là:
-	\begin{enumerate}[a.]
+	\begin{enumerate}[A.]
 		\item $50^{\circ}$
 		\item $130^{\circ}$
 		\item $50^{\circ}$ và $130^{\circ}$
 		\item $80^{\circ}$
 	\end{enumerate}
-	\loigiai{} 
+	\loigiai{C} 
 \end{bt}
 
 \begin{bt}
 	Cho hàm số $\mathrm{y}=\mathrm{f}(\mathrm{x})$ xác định với mọi $x>1$. Biết $\mathrm{f}(\mathrm{n})=(\mathrm{n}-1) \cdot \mathrm{f}(\mathrm{n}-1)$ và $\mathrm{f}(1)=1$. Giá trị của $\mathrm{f}(4)$ là:
-	\begin{enumerate}[a.]
+	\begin{enumerate}[A.]
 		\item 3
 		\item 5
 		\item 6
 		\item 1
 	\end{enumerate}
-	\loigiai{} 
+	\loigiai{C} 
 \end{bt}
 
 \begin{bt}
 	Cho tam giác $A B C$ vuông tại $B, A B=6, \hat{A}=30^{\circ}$. Phân giác góc $C$ cắt $A B$ tại $D$. Khi đó độ dài đoạn thẳng $\mathrm{BD}$ và $\mathrm{AD}$ lần lượt là:
-	\begin{enumerate}[a.]
+	\begin{enumerate}[A.]
 		\item $2 ; 4$
 		\item $3 ; 3$
 		\item $4 ; 2$
 		\item $1 ; 5$
 	\end{enumerate}
-	\loigiai{} 
+	\loigiai{A} 
 \end{bt}
 
 \begin{bt}
 	Cho $a^{2 \mathrm{~m}}=-4$. Kết quả của $2 a^{6 m}-5$ là:
-	\begin{enumerate}[a.]
+	\begin{enumerate}[A.]
 		\item $-123$
 		\item $-133$
 		\item 123
 		\item $-128$
 	\end{enumerate}
-	\loigiai{} 
+	\loigiai{B} 
 \end{bt}
 
 \begin{bt}
 	Cho tam giác $\mathrm{DEF}$ có $\angle \mathrm{E}=\angle \mathrm{F}$. Tia phân giác của góc $\mathrm{D}$ cắt EF tại $\mathrm{I}$. Ta có:
-	\begin{enumerate}[a.]
+	\begin{enumerate}[A.]
 		\item $\triangle \mathrm{DIE}=\Delta \mathrm{DIF}$
 		\item $\mathrm{DE}=\mathrm{DF}, \angle \mathrm{IDE}=\angle \mathrm{IDF}$
 		\item $\mathrm{IE}=\mathrm{IF} ; \mathrm{DI}=\mathrm{EF}$
 		\item Cả $\mathrm{A}, \mathrm{B}, \mathrm{C}$ đều đúng
 	\end{enumerate}
-	\loigiai{} 
+	\loigiai{D} 
 \end{bt}
 
 \begin{bt}
 	Biết $\mathrm{a}+\mathrm{b}=9$. Kết quả của phép tính $0, a(b)+0, b(a)$ là:
-	\begin{enumerate}[a.]
+	\begin{enumerate}[A.]
 		\item 2
 		\item 1
 		\item 0,5
 		\item 1,5
 	\end{enumerate}
-	\loigiai{} 
+	\loigiai{B} 
 \end{bt}
 
 \begin{bt}
 	Cho $(a-b)^2+6 a \cdot b=36$. Giá trị lớn nhất của $x=a \cdot b$ là:
-	\begin{enumerate}[a.]
+	\begin{enumerate}[A.]
 		\item 6
 		\item $-6$
 		\item 7
 		\item 5
 	\end{enumerate}
-	\loigiai{} 
+	\loigiai{A} 
 \end{bt}
 
 \begin{bt}
 	Cho tam giác $A B C$, hai đường trung tuyến $\mathrm{BM}, \mathrm{CN}$. Biết $\mathrm{AC}>\mathrm{AB}$. Khi đó độ dài hai đoạn thẳng $\mathrm{BM}$ và $C N$ là:
-	\begin{enumerate}[a.]
+	\begin{enumerate}[A.]
 		\item $\mathrm{BM} \leq \mathrm{CN}$
 		\item $\mathrm{BM}>\mathrm{CN}$
 		\item $\mathrm{BM}<\mathrm{CN}$
 		\item $\mathrm{BM}=\mathrm{CN}$
 	\end{enumerate}
-	\loigiai{} 
+	\loigiai{C} 
 \end{bt}
 
 \begin{bt}
 	Điểm thuộc đồ thị hàm số $\mathrm{y}=-2 \mathrm{x}$ là:
-	\begin{enumerate}[a.]
+	\begin{enumerate}[A.]
 		\item M $(-1 ;-2)$
 		\item $\mathrm{N}(1 ; 2) \quad$
 		\item $\mathrm{P}(0 ;-2)$
 		\item $Q(-1 ; 2)$
 	\end{enumerate}
-	\loigiai{} 
+	\loigiai{D} 
 \end{bt}
 
 \begin{bt}
 	Biết rằng lãi suất hàng năm của tiền gửi tiết kiệm theo mức $5 \%$ năm là một hàm số theo số tiên gửi: $\mathrm{i}=0,005 \mathrm{p}$. Nếu tiền gửi là 175000 thì tiền lãi sẽ là:
-	\begin{enumerate}[a.]
+	\begin{enumerate}[A.]
 		\item 8850 đ
 		\item 8750 đ
 		\item 7850 đ
 		\item 7750 đ
 	\end{enumerate}
-	\loigiai{} 
+	\loigiai{B} 
 \end{bt}
 
 \begin{bt}
 	Cho tam giác $A B C$ cân tại $A, \hat{A}=20^{\circ}$. Trên cạnh $A B$ lấy điểm $D$ sao cho $A D=B C$. Số đo của góc BDC là:
-	\begin{enumerate}[a.]
+	\begin{enumerate}[A.]
 		\item $50^{\circ}$
 		\item $70^{\circ}$
 		\item $30^{\circ}$
 		\item $80^{\circ}$
 	\end{enumerate}
-	\loigiai{} 
+	\loigiai{C} 
 \end{bt}
 
 II. Phần tự luận
